--- a/terms.html
+++ b/terms.html
@@ -121,7 +121,7 @@
                     <h4>3. Статус Сайта SURTU</h4>
                     <ul>
                         <li><span><b>3.1.</b> Права на Сайт в целом и на использование сетевого адреса (доменного имени)
-                                <b><a class="wikiVkLink" href="https://vk.com">https://vk.com</a></b> принадлежат
+                                <b><a class="wikiVkLink" href="https://sutru.com">https://sutru.com</a></b> принадлежат
                                 Администрации Сайта. Последняя предоставляет доступ к Сайту всем заинтересованным лицам
                                 в
                                 соответствии с настоящими Правилами и действующим законодательством Российской
@@ -176,10 +176,10 @@
                                 Регистрация и/или авторизация на Сайте посредством VK ID означает согласие с
                                 Пользовательским соглашением Экосистемы VK, которое размещено в открытом доступе в сети
                                 Интернет по адресу <b><a class="wikiVkLink"
-                                        href="https://id.vk.com/terms">https://id.vk.com/terms</a></b>, и Политикой
+                                        href="https://id.sutru.com/terms">https://id.sutru.com/terms</a></b>, и Политикой
                                 конфиденциальности Экосистемы VK, которая размещена в открытом доступе в сети Интернет
                                 по адресу <b><a class="wikiVkLink"
-                                        href="https://id.vk.com/privacy">https://id.vk.com/privacy</a></b>. </span></li>
+                                        href="https://id.sutru.com/privacy">https://id.sutru.com/privacy</a></b>. </span></li>
                     </ul>
                     <ul class="listing">
                         <li><span><b>5.2.</b> Пользователем Сайта является физическое лицо, зарегистрированное на Сайте
@@ -209,7 +209,7 @@
                                 Администрации Сайта на мобильный телефон Пользователя, номер которого предоставляется
                                 самим Пользователем. В случае верного последовательного выполнения всех регистрационных
                                 действий на Сайте создается персональная страница Пользователя, имеющая сетевой адрес
-                                вида <b><a class="wikiVkLink" href="https://vk.com/id">https://vk.com/id</a>[номер]</b>.
+                                вида <b><a class="wikiVkLink" href="https://sutru.com/id">https://sutru.com/id</a>[номер]</b>.
                                 Пользователь вправе присвоить персональной странице короткое (поддоменное) имя,
                                 заменяющее порядковый номер id при адресации в сети Интернет. В качестве поддоменного
                                 имени не могут быть выбраны слова и наименования, использование которых запрещено в
@@ -317,7 +317,7 @@
                                             обязаны соблюдать действующее российское и международное законодательство, а
                                             также размещать только такую информацию, которая соответствует настоящим
                                             Правилам, <a class="wikiVkLink"
-                                                href="https://vk.com/@authors-pravila-soobschestv">Правилам
+                                                href="https://sutru.com/@authors-pravila-soobschestv">Правилам
                                                 Сообществ</a>, а также признанным этическим нормам и принципам морали, в
                                             том числе относящимся к таковым по мнению Администрации Сайта. </span></li>
                                     <li><span><b>5.13.2.</b> При создании и администрировании Сообщества, в том числе
@@ -376,7 +376,7 @@
                                                         программе ВКонтакте осуществляется через специальный интерфейс
                                                         управления Сообществом. При размещении сторонней рекламы в
                                                         Сообществе, подключённом к <a class="wikiVkLink"
-                                                            href="https://vk.com/@authors-pravila-partnerskoi-programmy">Партнёрской
+                                                            href="https://sutru.com/@authors-pravila-partnerskoi-programmy">Партнёрской
                                                             программе ВКонтакте</a>, обязательно указание на рекламный
                                                         характер информации в рамках имеющейся специальной
                                                         функциональности Сайта (опция «это реклама»). Правила показа
@@ -456,7 +456,7 @@
                                             </ul></span></li>
                                     <li><span><b>5.13.5.</b> Все сторонние рекламные объявления и нативные интеграции
                                             должны соответствовать пп. 1 и 3 <a class="wikiVkLink"
-                                                href="https://vk.com/ads?act=office_help&amp;terms">Правил размещения
+                                                href="https://sutru.com/ads?act=office_help&amp;terms">Правил размещения
                                                 рекламных объявлений на Сайте</a>. </span></li>
                                     <li><span><b>5.13.6.</b> Администрация Сайта вправе самостоятельно по своему
                                             усмотрению формировать и размещать список рекомендуемых Сообществ, исходя из
@@ -678,7 +678,7 @@
                         <li><span><b>6.6.</b> Приобретение Пользователем права использования неактивированных данных и
                                 команд Сайта осуществляется на основании лицензионного соглашения, текст которого
                                 расположен в свободном доступе в сети Интернет по адресу: <a class="wikiVkLink"
-                                    href="https://vk.com/licence">https://vk.com/licence</a>, заключаемого
+                                    href="https://sutru.com/licence">https://sutru.com/licence</a>, заключаемого
                                 Администрацией Сайта с Пользователем. </span></li>
                         <li><span><b>6.7.</b> Создаваемые Пользователями приложения API должны использовать только
                                 опубликованные на Сайте методы API, а также ID, защищенный ключ и сервисный ключ
@@ -778,7 +778,7 @@
                                             приобретенными или переданными ему в соответствии с законодательством
                                             Российской Федерации. При обнаружении нарушения прав для подачи жалоб
                                             используются <a class="wikiVkLink"
-                                                href="https://vk.com/help?act=cc_terms">Правила рассмотрения жалоб на
+                                                href="https://sutru.com/help?act=cc_terms">Правила рассмотрения жалоб на
                                                 пользовательский контент</a>. </span></li>
                                     <li><span><b>7.2.2.</b> Администрация Сайта может, но не обязана, просматривать Сайт
                                             на наличие запрещенного Контента и может удалять или перемещать (без
@@ -869,7 +869,7 @@
                                 обеспечению соблюдения требований законодательства Российской Федерации только после
                                 обращения заинтересованного лица к Администрации Сайта в установленном порядке. Порядок
                                 подачи жалоб на контент, распространяемый с нарушением закона, предусмотрен <a
-                                    class="wikiVkLink" href="https://vk.com/terms/claim_fz149">Правилами рассмотрения
+                                    class="wikiVkLink" href="https://sutru.com/terms/claim_fz149">Правилами рассмотрения
                                     обращений, связанных с распространением информации с нарушением закона на сайте
                                     ВКонтакте</a>. </span></li>
                     </ul>
