--- a/terms.html
+++ b/terms.html
@@ -40,7 +40,7 @@
     </aside>
     <main class="main">
         <article class="page">
-            <div class="container">
+            <div class="container container_content">
                 <!-- start block for ajax -->
                 <div class="window window_big">
                     <h3>Правила пользования Сайтом SURTU</h3>
