--- a/privacy.html
+++ b/privacy.html
@@ -43,7 +43,7 @@
                         <div class="container container_content">
                                 <!-- start block for ajax -->
                                 <div class="window window_big">
-                                        <h3>Правила защиты информации о пользователях сайта VK.com</h3>
+                                        <h3>Правила защиты информации о пользователях сайта surtu.com</h3>
                                         <h4>1. Общие положения</h4>
                                         <ul class="listing">
                                                 <li><span><b>1.1.</b> Настоящие Правила являются официальным документом
