--- a/licence.html
+++ b/licence.html
@@ -52,7 +52,7 @@
                                         ИСПОЛЬЗУЕТЕ СОЦИАЛЬНУЮ СЕТЬ, ТО ЭТИМ ВЫ АКЦЕПТУЕТЕ НАСТОЯЩЕЕ ЛИЦЕНЗИОННОЕ
                                         СОГЛАШЕНИЕ И ПОДТВЕРЖДАЕТЕ СВОЕ СОГЛАСИЕ СО ВСЕМИ ЕГО УСЛОВИЯМИ БЕЗ КАКИХ-ЛИБО
                                         ОГРАНИЧЕНИЙ. <br><br> Настоящее лицензионное соглашение (далее «Соглашение»)
-                                        регулирует отношения между ООО «В Контакте», именуемое в дальнейшем «Лицензиар»
+                                        регулирует отношения между ООО «SURTU», именуемое в дальнейшем «Лицензиар»
                                         и Вами, Лицензиатом Социальной сети (далее «Лицензиат»), в отношении
                                         использования Социальной сети. <br><br> <a
                                                 name="1. Термины, используемые в настоящем Соглашении"></a>
@@ -1645,7 +1645,7 @@
                                                                 согласия между сторонами путем переговоров в течение 60
                                                                 (шестидесяти) календарных дней с момента получения
                                                                 другой Стороной письменной претензии, рассмотрение спора
-                                                                должно быть передано любой заинтересованной стороной в
+                                                                должно быть передано любой заинтеесованной стороной в
                                                                 суд общей юрисдикции по месту нахождения Лицензиара (с
                                                                 исключением подсудности дела любым иным судам), если
                                                                 иное прямо не предусмотрено применимым
